<resources>
    <string name="app_name">Fort Knox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

<!--    menu strings -->
    <string name="menu_home">Home</string>
    <string name="menu_investments">Investments</string>
    <string name="menu_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Speichern</string>
    <string name="hint_word">Gib dein Text hier ein</string>
    <string name="add_word">add word</string>
    <string name="noAccount">You do not have an account ?</string>
    <string name="loginButtonText">Login</string>
    <string name="passwordHint">Password:</string>
    <string name="mailHint">E-Mail:</string>
    <string name="loginHeadlineText">Login</string>
    <string name="repeadPasswordHint">Repead Password:</string>
    <string name="loginBtnText">Login</string>
    <string name="registerHeadlineText">Register</string>
    <string name="tertiaryToLoginText">You have an account ?</string>
    <string name="tertiaryToRegisterText">You do not have an account ?</string>
    <string name="titleFortKnox">Fort Knox</string>
    <string name="registerBtnText">Register</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="legal_notification_text">Legal information</string>
    <string name="and_text">and</string>
    <string name="data_protection_text">data protection</string>
    <string name="text_privacy">Anschrift:<br/><br/>
                                <br/><br/>
                                FortKnox GmbH<br/>
                                Luxemburger Str. 10, 13353<br/>
                                Berlin, Deutschland<br/>
                                030 45040<br/>
                                info@fortknox.de<br/>
                                <br/><br/>
                                Vertreten durch:<br/>
                                Phillip Engels<br/>
                                <br/><br/>
                                Eingetragen im Amtsgericht Berlin<br/>
                                Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br/>
                                Phillip Engels, Percy Mummelthey, Muhammed Sezen, Nora Tuchel, Kevin Halat.<br/>
                                <br/><br/>
                                Kontakt:<br/>
                                <br/><br/>
                                Bei allgemeinen Fragen, erreichst du uns per E-Mail unter fragen@fortknox.de .<br/>
                                <br/><br/>
                                Bei sicherheitsrelevanten Fragen, stehen wir dir unter schutz@fortknox.de zur Verfügung.<br/>
                                <br/><br/>
                                Haftung für Inhalte:<br/>
                                Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. <br/>Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.<br/>
                                Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.<br/>
                                Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.<br/>
                                Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt.<br/>
                                Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich.<br/>
                                Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</string>
    <string name="legal_text_firebase">Firebase Authentication (Google Inc.) Firebase Authentication ist ein von Google Inc. bereitgestellter Anmelde- und Authentifizierungsdienst.<br/> Um den Anmelde- und Authentifizierungsprozess zu vereinfachen, kann Firebase Authentication Identitätsdienste von Drittparteien benutzen und die Informationen auf ihrer Plattform speichern.<br/> Erhobene personenbezogene Daten: E-Mail, Nutzername, Passwort Wir nutzen nach Möglichkeit Server mit einem Standort innerhalb der EU.<br/> Es ist aber nicht auszuschließen, dass Daten auch in die USA übertragen werden.<br/> Für die personenbezogene Daten, die in die USA übertragen werden, hat sich Google dem EU-US Privacy Shield unterworfen: www.privacyshield.gov/participant.<br/> Nähere Informationen zu Google Firebase und Datenschutz finden Sie unter https://policies.google.com/privacy sowie firebase.google.com.</string>
    <string name="copyright_text">Copyright 2021</string>
    <string name="headline_legal_notification">Legal Notification</string>
    <string name="headline_privacy_text">Privacy</string>
    <string name="fort_knox_logo">Fort_Knox_Logo</string>
    <string name="google_analytics_text">Mit den in diesem Abschnitt aufgeführten Dienstleistungen kann der Eigentümer den Datenverkehr überwachen und analysieren sowie das Verhalten von Nutzern nachverfolgen. Wir setzen solche Dienste auf Grundlage unserer berechtigten Interessen (d.h. Interesse an der Analyse, Optimierung und wirtschaftlichem Betrieb unseres Onlineangebotes im Sinne des Art. 6 Abs. 1 lit. f. DSGVO) ein. Google Analytics mit IP-Anonymisierung (Google Inc.) Google Analytics ist ein Webanalysedienst von Google Inc. („Google“). Google verwendet die erhobenen Daten, um nachzuverfolgen und zu untersuchen, wie diese Website genutzt wird, Berichte über die Aktivitäten von Nutzern zu verfassen und diese gemeinsam mit anderen Google-Diensten zu nutzen. Google kann die erhobenen Daten verwenden, um die Anzeigen seines eigenen Werbenetzwerks zu kontextualisieren und personalisieren. Auf dieser Webseite wurde die IP-Anonymisierung aktiviert, so dass die IP-Adresse der Nutzer von Google innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum zuvor gekürzt wird. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort gekürzt. Erhobene personenbezogene Daten: Cookie und Nutzungsdaten. Wir nutzen nach Möglichkeit Server mit einem Standort innerhalb der EU. Es kann jedoch nicht ausgeschlossen werden, dass Daten auch in die USA übertragen werden. Für die personenbezogene Daten, die in die USA übertragen werden, hat sich Google dem EU-US Privacy Shield unterworfen: www.privacyshield.gov/participant Weitere Informationen zur Datennutzung durch Google, Einstellungs- und Widerspruchsmöglichkeiten, erfahren Sie in der Datenschutzerklärung von Google (https://policies.google.com/technologies/ads) sowie in den Einstellungen für die Darstellung von Werbeeinblendungen durch Google(https://adssettings.google.com/authenticated).</string>
    <string name="google_analitycs_headline_text">Google Analitycs</string>
    <string name="firebase_auth_headline_text">Firebase Auth</string>
    <string name="logout_button_text">Logout</string>
    <string name="defailt_account_password">Test12345.</string>
    <string name="default_account_user">percy.mummelthey@gmail.com</string>

    <string-array name="add_transaction_names">
        <item>Food</item>
        <item>Games</item>
        <item>Gas Station</item>
        <item>Party</item>
        <item>Birthday</item>
        <item>Sport</item>
    </string-array>
</resources>