<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_investments"
            android:title="@string/menu_investments" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>

    <item
        android:title=""
        android:id="@+id/logoutMenu">
        <menu>
            <item
                android:id="@+id/remove_logout_button_title"
                android:title=""
                app:actionLayout="@layout/nav_footer_main"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>