<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ford_knox_logo_foreground"
            android:contentDescription="@string/fort_knox_logo"/>

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="16"
            android:text="@string/titleFortKnox"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_color_dark_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_inner_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_frame_background"
            app:layout_constraintBottom_toTopOf="@+id/layoutRegisterDataLegal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.2">

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:height="60dp"
                android:backgroundTint="@color/text_button_blue"
                android:text="@string/registerBtnText"
                app:layout_constraintBottom_toTopOf="@+id/tertiaryLoginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/entry_frame_background"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textColor="@color/text_color_dark_mode"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/entry_frame_background"
                android:ems="10"
                android:hint="@string/mailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color_dark_mode"
                android:textColorHint="@color/hint_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/registerHeadlineText"
                android:textAlignment="center"
                android:textColor="@color/text_color_dark_mode"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tertiaryLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:text="@string/tertiaryToLoginText"
                android:textAlignment="center"
                android:textColor="@color/text_button_blue"
                app:layout_constraintBottom_toBottomOf="@+id/register_inner_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:gravity="center"
            android:id="@+id/layoutRegisterDataLegal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_height="20dp">

            <TextView
                android:id="@+id/legalRegisterText"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:text="@string/legal_notification_text"
                android:textAlignment="textEnd"
                android:textColor="@color/text_button_blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/andRegisterText"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:text="@string/and_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/dataProtectionRegisterText"
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:text="@string/data_protection_text"
                android:textAlignment="textStart"
                android:textColor="@color/text_button_blue"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>